--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -131,6 +131,6 @@ jobs:
       - name: Create release
         uses: softprops/action-gh-release@v2
         with:
-          body: "${{ needs.generate-changelog.outputs.release_body }}"
+          body: "${{ needs.changelog.outputs.release_body }}"
           files: "dist/**/*"
           fail_on_unmatched_files: true
