--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,10 @@ name: Test
 on:
   workflow_dispatch:
 
+  push:
+    branches:
+      - main
+
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
 
