--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,11 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "cmd/**/*"
+      - "internal/**/*"
+      - "test/**/*"
+      - "*.go"
 
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
