--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,13 +34,13 @@ jobs:
         with:
           go-version: "${{ env.GO_VERSION }}"
 
-      - name: Generate templ
-        run: |
-          go install github.com/a-h/templ/cmd/templ@latest
-          templ generate internal/tmpl/templates
+      - name: Install templ
+        run: go install github.com/a-h/templ/cmd/templ@latest
 
       - name: Run test
-        run: go test -v ./test/...
+        run: |
+          go generate
+          go test -v ./test/...
 
   build:
     strategy:
@@ -82,13 +82,13 @@ jobs:
         with:
           go-version: "${{ env.GO_VERSION }}"
 
-      - name: Generate templ
-        run: |
-          go install github.com/a-h/templ/cmd/templ@latest
-          templ generate internal/tmpl/templates
+      - name: Install templ
+        run: go install github.com/a-h/templ/cmd/templ@latest
 
       - name: Build
-        run: GOOS=${{ matrix.configs.goos }} GOARCH=${{ matrix.configs.goarch }} go build -v -o ./dist/goserve_${{ matrix.configs.goos }}_${{ matrix.configs.goarch }}${{ matrix.configs.ext }}
+        run: |
+          go generate
+          GOOS=${{ matrix.configs.goos }} GOARCH=${{ matrix.configs.goarch }} go build -v -o ./dist/goserve_${{ matrix.configs.goos }}_${{ matrix.configs.goarch }}${{ matrix.configs.ext }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
