--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,13 +45,13 @@ jobs:
         with:
           go-version: "${{ env.GO_VERSION }}"
 
-      - name: Generate templ
-        run: |
-          go install github.com/a-h/templ/cmd/templ@latest
-          templ generate internal/tmpl/templates
+      - name: Install templ
+        run: go install github.com/a-h/templ/cmd/templ@latest
 
       - name: Build
-        run: go build -v
+        run: |
+          go generate
+          go build -v
 
       - name: Run test
         run: go test -v ./test/...
