--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,12 +34,17 @@ jobs:
         with:
           go-version: "${{ env.GO_VERSION }}"
 
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "lts/*"
+
       - name: Install templ
         run: go install github.com/a-h/templ/cmd/templ@latest
 
       - name: Run test
         run: |
-          go generate
+          go generate ./...
           go test -v ./test/...
 
   build:
@@ -82,12 +87,17 @@ jobs:
         with:
           go-version: "${{ env.GO_VERSION }}"
 
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "lts/*"
+
       - name: Install templ
         run: go install github.com/a-h/templ/cmd/templ@latest
 
       - name: Build
         run: |
-          go generate
+          go generate ./...
           GOOS=${{ matrix.configs.goos }} GOARCH=${{ matrix.configs.goarch }} go build -v -o ./dist/goserve_${{ matrix.configs.goos }}_${{ matrix.configs.goarch }}${{ matrix.configs.ext }}
 
       - name: Upload artifact
@@ -112,7 +122,7 @@ jobs:
         id: git-cliff
         with:
           config: cliff.toml
-          args: -vv -l -s all
+          args: -v -l -s all
         env:
           OUTPUT: CHANGES.md
 
