--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,12 +45,17 @@ jobs:
         with:
           go-version: "${{ env.GO_VERSION }}"
 
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "lts/*"
+
       - name: Install templ
         run: go install github.com/a-h/templ/cmd/templ@latest
 
       - name: Build
         run: |
-          go generate
+          go generate ./...
           go build -v
 
       - name: Run test
