chore(actions): build workflow reuse job from test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,43 +10,7 @@ env:
 
 jobs:
   test:
-    strategy:
-      matrix:
-        os:
-          - ubuntu-22.04
-          - ubuntu-24.04
-          - windows-2022
-          - windows-2025
-          - macos-14
-          - macos-15
-
-    runs-on: ${{ matrix.os }}
-
-    timeout-minutes: 10
-
-    permissions:
-      contents: read
-
-    steps:
-      - uses: actions/checkout@v6
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "${{ env.GO_VERSION }}"
-
-      - name: Set up Node
-        uses: actions/setup-node@v6
-        with:
-          node-version: "lts/*"
-
-      - name: Install templ
-        run: go install github.com/a-h/templ/cmd/templ@latest
-
-      - name: Run test
-        run: |
-          go generate ./...
-          go test -v ./test/...
+    uses: ducng99/goserve/.github/workflows/test.yml@main
 
   build:
     strategy:
@@ -72,7 +36,7 @@ jobs:
           - goos: "darwin"
             goarch: "arm64"
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     permissions:
       contents: read
@@ -110,7 +74,7 @@ jobs:
 
   changelog:
     name: Generate changelog
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     outputs:
       release_body: ${{ steps.git-cliff.outputs.content }}
     steps:
@@ -132,7 +96,7 @@ jobs:
       - build
       - changelog
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     permissions:
       contents: write
